clusters/cosmos/apps/heimdall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: heimdall-ingress
spec:
 tls:
 - hosts:
   - home.cosmos.cboxlab.com
   secretName: home-tls-secret
 rules:
 - host: home.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: heimdall
           port:
             number: 80
       path: /
       pathType: Prefix
